# CC-Plocation

./: .gitignore  README.md  charge_analyzer.py  defaults.py  diversity.py  framework_analyzer.py  main.py  mono.vasp  pbc_utils.py  placement_strategies.py  pyproject.toml  reporter.py  scorer.py  structure_parser.py  tri.vasp  visualization.py  writer.py
