[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-plocation"
version = "0.1.0"
description = "Counterion placement tool for Polyoxometalate (POM) structures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.scripts]
cc-plocation = "main:main"
