[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-plocation"
version = "0.1.0"
description = "Counterion placement tool for Polyoxometalate (POM) structures"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[tool.setuptools]
py-modules = [
    "main",
    "charge_analyzer",
    "defaults",
    "diversity",
    "framework_analyzer",
    "pbc_utils",
    "placement_strategies",
    "reporter",
    "scorer",
    "structure_parser",
    "writer",
]

[project.scripts]
cc-plocation = "main:main"
